ingreso de datos por consola